test_suite/tests/errors/duplicate_block_attribute.rs
use banish::banish;

fn main() {
    banish! {
        #![async, async]

        @foo
            done? { return; }
    }
}
