test_suite/tests/errors/duplicate_block_attribute.stderr
error: Duplicate attribute `async`. Remove the duplicate
 --> tests/errors/duplicate_block_attribute.rs:5:19
  |
5 |         #![async, async]
  |                   ^^^^^
